--- a/index.html
+++ b/index.html
@@ -628,6 +628,8 @@
                                 
                                 </div>
                                 <br>
+                                <h5 style="color: #fff">(91) 9 8305-7675</h5>
+                                <br>
                                 <h5 style="color: #fff">Pack para iniciar a partir de $10.</h5>
                                 <br>
                                 <p style="color: #fff"> Ecolha o que mais encaixa em seu perfil e comece a multiplicar seu dinheiro agora mesmo!</p>
