--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             </div>
                             
                             <div class="embed">
-                                <iframe src="https://www.youtube.com/embed/qP7_r7p2N28" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe src="https://www.youtube.com/embed/qP7_r7p2N28" frameborder="0" allow="accelerometer; autoplay; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
                             <br>
                                 
