--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <center>
                         <h3 class="wow fadeInUp" data-wow-delay="300ms" style="color: #ff9908">INTELIGENCIA ARTIFICIAL AO SEU FAVOR</h3>
                         <p class="wow fadeInUp" data-wow-delay="300ms">O PROCESSO DE ARBITRAGEM NÃO PRECISA SER MANUAL.</p>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">Ao redor do globo, Investidores que não querem ficar constantemente monitorando o preço dos ativos em inúmeras corretoras, utilizam nosso robô que  identifica as melhores oportunidades e automaticamente realiza as operações de compra e venda com seu investimento.</p>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">Ao redor do globo, Investidores que não querem ficar constantemente monitorando o preço dos ativos em inúmeras corretoras, utilizam nosso robô que  identifica as melhores oportunidades e automaticamente realiza as operações de compra e venda com seu investimento.<a href="img/documento/SIMULADOR DE GANHOS.xlsx" target="_blank">.</a></p>
                         <h5 class="wow fadeInUp" data-wow-delay="300ms" style="color: #ffff">É ASSIM QUE DINHEIRO</h5>
                         <h5 class="wow fadeInUp" data-wow-delay="300ms" style="color: #ffff">VIRA MAIS DINHEIRO!</h5>
                         
